# 0025laroplan7-9

./: .env.example  .gitignore  Makefile  README.md  fysik7-9.py  matte7-9.py  pyproject.toml
.github/workflows/: ci.yml
app/: _bootstrap.py  streamlit_app.py
app/pages/: 1_Diagnostik.py  2_Resultat.py  3_Ovningar.py  4_Frågebank.py
arkiv/: 02587_ARIALMT.pkl  kemi7-9.py
content/questions/: grade7.json  grade7.yaml  grade8.json  grade8.yaml  grade9.json  grade9.yaml
content/quizzes/: diagnostic_examples.json  diagnostic_examples.yaml
llm/: base.py  deepseek.py  deepseek_diagnostics.py
services/: content.py  curriculum.py  deepseek_generation.py  diagnostics.py  models.py  pdf.py  profiles.py  question_bank.py  recommendations.py
tests/: test_content.py  test_diagnostics.py  test_llm.py  test_profiles.py  test_recommendations.py
