[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matte-diagnostics"
version = "0.1.0"
description = "Webbaserad matte-övningsapp för årskurs 7-9"
authors = [{name = "Laroplan Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.31",
    "pydantic>=2.5",
    "httpx>=0.26",
    "fpdf2>=2.7",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pypdf>=4.0",
    "respx>=0.20",
    "pytest-asyncio>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "mypy>=1.8",
    "ruff>=0.1.9",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true
mypy_path = ["."]
exclude = "arkiv|matematik|matte7-9\\.py"

[[tool.mypy.overrides]]
module = ["yaml", "fpdf"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["arkiv", "matematik", "matte7-9.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.poetry]
package-mode = false

[tool.setuptools.packages.find]
include = ["services", "services.*", "llm", "llm.*"]
